# office-screen

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  WORKFLOWS.md  WORKFLOW_SUMMARY.md  WORKFLOW_TESTING_SUMMARY.md  check_workflow_status.py  config.json  office_screen.py  pi-pages.py  pi-pages.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_workflows_local.py  trigger_workflow_test.py  urls-1.json  urls.json  version.json  version.py  workflow_test_trigger.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  dependency-update.yml  docker.yml  documentation.yml  performance.yml  pylint.yml  release.yml  security.yml  test-simple.yml  test.yml  version-bump.yml
config/: config.example.json
config/urls/: .gitkeep  urls-business.json  urls-design.json  urls-gaming.json  urls-news.json  urls-software.json  urls-tech.json
docs/: README.md  index.html
examples/: basic_usage.py  custom_config.py
office_screen/: __init__.py  office_screen.py
pi_pages/: __init__.py
tests/: __init__.py  conftest.py  test_basic.py
tests/integration/: __init__.py  test_integration.py
tests/load/: __init__.py  test_load.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: __init__.py  test_pi_pages.py
